--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,2 +1,29 @@
+/.DS_Store
+/BookOfIllusions.class
+/Calculator.class
+/ChuckleClicker.class
+/CowTimer.class
+/FortuneTeller.class
+/GetLatestTweet.class
+/Jeopardy.class
+/Movie.class
+/NastySurprise.class
+/NetflixQueue.class
 /PigLatinTranslator.class
+/Recipes.html
+/SimonSays.class
+/TypingTutor.class
 /WhackAMole.class
+/creepy-noise.wav
+/down.jpg
+/extra/
+/fortune teller.png
+/gridworld.jar
+/illusion1.jpg
+/illusion2.jpg
+/jeopardy.wav
+/left.jpg
+/moo.wav
+/right.jpg
+/up.jpg
+/SlotMachine.class
